--- a/_config.yml
+++ b/_config.yml
@@ -80,13 +80,13 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Sidebar Name"
+  name             : "Baoshan Song"
   avatar           : "profile.png"
-  bio              : "Your biography for the left-hand sidebar"
+  bio              : "Phd Student in polyu"
   location         : "Location"
   employer         :
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  googlescholar    : "http://yourfullgooglescholarurl.com"
+  googlescholar    : "https://scholar.google.com/citations?view_op=list_works&hl=en&user=Uqn8268AAAAJ&gmla=AOV7GLM75vc3PmXO0oTyFId8YEC_EQFQWj8ljgaplAgg3TO6zihfvEMsK-0-UAXBFwAWqMVCDICCggNupSMG_RkcsUUWHpeqLOUIlW5kODSmh_F4VYS2Lew"
   email            :
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
