--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Baoshan Song"
-  avatar           : "profile.jpg"
+  avatar           : "profile.png"
   bio              : "Phd Student in polyu"
   location         : "Location"
   employer         :
